# python

./: .gitmodules  basic.py  flake.nix  pyproject.toml  type_hints.py  variable_names.py
pydantic/: JSON_schema.py  pydantic_perfomance.py  pydantic_quickstart.py  pydantic_serialization.py  pydantic_typing.py  strict_mode.py  typed_dict_validation.py  validation_customization.py
